--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "游戏框架",
   "main": "index.js",
   "scripts": {
-    "start": "node scripts/start.js"
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js"
   },
   "repository": {
     "type": "git",
